--- a/app.json
+++ b/app.json
@@ -23,10 +23,7 @@
       "supportsTablet": true
     },
     "android": {
-      "permissions": {
-        "READ_CALENDAR": true,
-        "WRITE_CALENDAR": true
-      },
+      "permissions": ["READ_CALENDAR", "WRITE_CALENDAR"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
