--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
+    "expo-dev-client": "~0.8.0",
     "expo-status-bar": "~1.2.0",
+    "install": "^0.13.0",
+    "npm": "^8.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.1",
     "react-native-safe-area-context": "3.3.2",
