--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
     "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "^2.1.1",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1"
   },
