--- a/package.json
+++ b/package.json
@@ -10,28 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~44.0.0",
-    "expo-dev-client": "~0.8.0",
     "expo-calendar": "~10.1.0",
+    "expo-dev-client": "~0.8.0",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "install": "^0.13.0",
     "npm": "^8.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-<<<<<<< HEAD
     "react-native": "0.64.3",
-    "react-native-date-picker": "^4.1.3",
-    "react-native-datepicker": "^1.7.2",
-=======
-    "react-native-date-picker": "^4.1.3",
-    "react-native-datepicker": "^1.7.2",
-    "react-native": "0.64.3",
->>>>>>> d7e158c25df6772157c2ca4ec9122e3090588c61
+    "react-native-add-calendar-event": "^4.0.0",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-safe-area-context": "3.3.2",
