fixed the android crash

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.2.0",
     "install": "^0.13.0",
     "npm": "^8.3.1",
+    "polar-to-cartesian": "^0.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
